--- a/web.html
+++ b/web.html
@@ -18,6 +18,7 @@
     <nav><i class="fa-solid fa-bars"></i></nav>
     <hgroup>
         <h1>Dawid Ławniczak</h1>
+        <h2>Działa :)</h2>
         <h3><span>Robię strony,</span> Uwielbiam to co robię <i class="fa-solid fa-heart"></i></h3>
     </hgroup>
     <img src="img/2167.png">
