--- a/web.html
+++ b/web.html
@@ -26,7 +26,10 @@
     </div>
     
 </header>
-<main></main>
+<main>
+
+  
+</main>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
 <script>
    var $arrow = $("#arrow a");
