--- a/web.html
+++ b/web.html
@@ -14,22 +14,37 @@
 <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Serif&display=swap" rel="stylesheet">
 </head>
 <body>
+  
 <header>
-    <nav><i class="fa-solid fa-bars"></i></nav>
+  <nav><i class="fa-solid fa-bars"></i></nav>
     <hgroup>
         <h1>Dawid Ławniczak</h1>
         <h3><span>Robię strony,</span> Uwielbiam to co robię <i class="fa-solid fa-heart"></i></h3>
     </hgroup>
-    <img src="img/2167.png">
     <div id="arrow">
     <i class="fa-solid fa-angle-down"></i>
     </div>
     
 </header>
 <main>
-
-  
+  <div id="content">
+<div class="anim1"></div>
+<h3>Hej mam na imię Dawid i chcę w przyszłości być Frontend Developerem. 
+  Moje aktualne umiejętności to dobra umiejętność posługiwania się HTML i CSS, ale uczę się jeszcze JS i vue.js.
+   W przyszłości mam zamiar rozwijać się jeszcze w angular.js</h3>
+   <div class="anim2"></div>
+</div>
+<iframe width="80%" height="40%" src="https://www.youtube.com/embed/BxjvvI-vtpc" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen class="yt_vid1"></iframe>
 </main>
+
+<info></info>
+
+
+
+
+
+
+
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
 <script>
    var $arrow = $("#arrow a");
