--- a/web.html
+++ b/web.html
@@ -30,7 +30,7 @@
   <div id="content">
 <div class="anim1"></div>
 <h3>Hej mam na imię Dawid i chcę w przyszłości być Frontend Developerem. 
-  Moje aktualne umiejętności to dobra umiejętność posługiwania się HTML i CSS, ale uczę się jeszcze JS i vue.js.
+  Moje aktualne umiejętności to dobre posługiwanie się HTML i CSS, ale uczę się jeszcze JS i vue.js.
    W przyszłości mam zamiar rozwijać się jeszcze w angular.js</h3>
    <div class="anim2"></div>
 </div>
