--- a/web.html
+++ b/web.html
@@ -14,9 +14,24 @@
 <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Serif&display=swap" rel="stylesheet">
 </head>
 <body>
+  <nav>
+    <ul class="active">
+      <li><a href="#">Home</a></li>
+      <li><a href="#main">About</a></li>
+      <li><a href="#">Info</a></li>
+      <li><a href="#">Contact</a></li>
+      <li><a href="#">More</a></li>
+    </ul>
+    
+    <button class="burger_menu">
+      <div class="line"></div>
+      <div class="line"></div>
+      <div class="line"></div>
+    </button>
   
+  </nav>
 <header>
-  <nav><i class="fa-solid fa-bars"></i></nav>
+  
     <hgroup>
         <h1>Dawid Ławniczak</h1>
         <h3><span>Robię strony,</span> Uwielbiam to co robię <i class="fa-solid fa-heart"></i></h3>
@@ -26,7 +41,7 @@
     </div>
     
 </header>
-<main>
+<main id="main">
   <div id="content">
 <div class="anim1"></div>
 <h3>Hej mam na imię Dawid i chcę w przyszłości być Frontend Developerem. 
@@ -34,7 +49,6 @@
    W przyszłości mam zamiar rozwijać się jeszcze w angular.js</h3>
    <div class="anim2"></div>
 </div>
-<iframe width="80%" height="40%" src="https://www.youtube.com/embed/BxjvvI-vtpc" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen class="yt_vid1"></iframe>
 </main>
 
 <info></info>
