--- a/web.html
+++ b/web.html
@@ -14,22 +14,6 @@
 <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Serif&display=swap" rel="stylesheet">
 </head>
 <body>
-  <nav>
-    <ul class="active">
-      <li><a href="#">Home</a></li>
-      <li><a href="#main">About</a></li>
-      <li><a href="#">Info</a></li>
-      <li><a href="#">Contact</a></li>
-      <li><a href="#">More</a></li>
-    </ul>
-    
-    <button class="burger_menu">
-      <div class="line"></div>
-      <div class="line"></div>
-      <div class="line"></div>
-    </button>
-  
-  </nav>
 <header>
   
     <hgroup>
@@ -49,9 +33,13 @@
    W przyszłości mam zamiar rozwijać się jeszcze w angular.js</h3>
    <div class="anim2"></div>
 </div>
+<div class="down_arrow"><i class="fa-solid fa-arrow-down"></i></div>
 </main>
 
-<info></info>
+<div id="info">
+Hello i'm new site of this website
+
+</div>
 
 
 
