--- a/web.html
+++ b/web.html
@@ -33,12 +33,19 @@
    W przyszłości mam zamiar rozwijać się jeszcze w angular.js</h3>
    <div class="anim2"></div>
 </div>
-<div class="down_arrow"><i class="fa-solid fa-arrow-down"></i></div>
+<a href="#info"><button class="press">Informacje</button></a>
 </main>
 
 <div id="info">
-Hello i'm new site of this website
-
+  <div class="con">
+<h2 class="hel">Witam ponownie!</h2>
+<h3>Tak jak mówiłem wcześniej mam na imię Dawid i jestem z Polski. Dokładniej z Wielkopolski ;). 
+  Interesuję się generalnie IT, czyli budowa, naprawa i użytkowanie PC ale tak jak wcześniej wspomniałem również programowaniem.
+Od roku już tworzę strony internetowe i jestem w tym coraz lepszy. To jest moja pierwsza strona w pełni responsywna, więc zawsze w wolnej chwili staram się
+naprawiać wszystkie błędy na bieżąco, ale cóż "praktyka czyni mistrza" co nie? W październiku 2022r. ukończę 16 lat, więc na tej stronie od daty rozpoczęcia
+prac jeszcze wiele się zmieni. </h3>
+<h2>Pozdrawiam</h2>
+</div>
 </div>
 
 
