--- a/web.html
+++ b/web.html
@@ -46,6 +46,7 @@ naprawiać wszystkie błędy na bieżąco, ale cóż "praktyka czyni mistrza" co
 prac jeszcze wiele się zmieni. </h3>
 <h2>Pozdrawiam</h2>
 </div>
+<a href="under website/index1.html"><div id="exp"><h2>Moje umiejętności</h2></div></a>
 </div>
 
 
