--- a/under website/index1.html
+++ b/under website/index1.html
@@ -6,12 +6,17 @@
     <title>Website</title>
     <link rel="shortcut icon" href="img/moje logo.png" />
     <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
-    <link rel="stylesheet" href="style1.css">
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.2/css/all.min.css">
+    <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css">
   <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Serif&display=swap" rel="stylesheet">
 </head>
 <body>
-  <center><h2><i class="fa-solid fa-house-laptop"></i>Prace tutaj ciągle trwają...<i class="fa-solid fa-person-digging"></i></h2></center> 
+  <header>
+    <div id="return"><a href="http://127.0.0.1:5500/Strona%20Davis%20git%20hub/web.html"><i class="fa-solid fa-caret-left"></i></a></div>
+    <h1>Witam</h1>
+    <h3>Moje umięjetności to dobre obsługiwanie języków HTML5, CSS3, podstawy języka Python i 
+      aktualnie uczę się JavaScript oraz obsługi jego frameworków typu jQuery i vue.js.</h3>
+  </header>
 </body>
