--- a/web.html
+++ b/web.html
@@ -42,9 +42,9 @@
 <h3>Tak jak mówiłem wcześniej mam na imię Dawid i jestem z Polski. Dokładniej z Wielkopolski ;). 
   Interesuję się generalnie IT, czyli budowa, naprawa i użytkowanie PC ale tak jak wcześniej wspomniałem również programowaniem.
 Od roku już tworzę strony internetowe i jestem w tym coraz lepszy. To jest moja pierwsza strona w pełni responsywna, więc zawsze w wolnej chwili staram się
-naprawiać wszystkie błędy na bieżąco, ale cóż "praktyka czyni mistrza" co nie? W październiku 2022r. ukończę 16 lat, więc na tej stronie od daty rozpoczęcia
+naprawiać wszystkie błędy na bieżąco, ale cóż "praktyka czyni mistrza" co nie? Zacząłem tworzyć tą stronę pod koniec sierpnia 2022r. więc na tej stronie od daty rozpoczęcia
 prac jeszcze wiele się zmieni. </h3>
-<h2>Pozdrawiam</h2>
+<h2>Pozdrawiam <p>(D.Ł. kl.2PŻ)</p></h2>
 </div>
 <a href="under website/index1.html"><div id="exp"><h2>Moje umiejętności</h2></div></a>
 </div>
