--- a/web.html
+++ b/web.html
@@ -44,7 +44,7 @@
 Od roku już tworzę strony internetowe i jestem w tym coraz lepszy. To jest moja pierwsza strona w pełni responsywna, więc zawsze w wolnej chwili staram się
 naprawiać wszystkie błędy na bieżąco, ale cóż "praktyka czyni mistrza" co nie? Zacząłem tworzyć tą stronę pod koniec sierpnia 2022r. więc na tej stronie od daty rozpoczęcia
 prac jeszcze wiele się zmieni. </h3>
-<h2>Pozdrawiam <p>(D.Ł. kl.2PŻ)</p></h2>
+<h2>Pozdrawiam</h2>
 </div>
 <a href="under website/index1.html"><div id="exp"><h2>Moje umiejętności</h2></div></a>
 </div>
