--- a/under website/index1.html
+++ b/under website/index1.html
@@ -17,6 +17,6 @@
     <div id="return"><a href="https://zagrywacz.github.io/Davis_webin.github.io/web.html"><i class="fa-solid fa-caret-left"></i></a></div>
     <h1>Witam</h1>
     <h3>Moje umięjetności to dobre obsługiwanie języków HTML5, CSS3, podstawy języka Python i 
-      aktualnie uczę się JavaScript oraz obsługi jego frameworków typu jQuery i vue.js.</h3>
+      aktualnie uczę się JavaScript oraz obsługi jego frameworków typu vue.js i biblioteki jQuery.</h3>
   </header>
 </body>
