--- a/web.html
+++ b/web.html
@@ -15,7 +15,22 @@
 </head>
 <body>
 <header>
-  
+  <nav class="navbar">
+    <div class="brand-title">Menu</div>
+    <a href="#" class="toggle-button">
+      <span class="bar"></span>
+      <span class="bar"></span>
+      <span class="bar"></span>
+    </a>
+    <div class="navbar-links">
+    <ul>
+      <a href="#"><li>Home</li></a>
+      <a href="under website/index1.html"><li>About</li></a>
+      <a href="#"><li>Contanct</li></a>
+      <a href="#"><li>Informations</li></a>
+    </ul>
+  </div>
+  </nav>
     <hgroup>
         <h1>Dawid Ławniczak</h1>
         <h3><span>Robię strony,</span> Uwielbiam to co robię <i class="fa-solid fa-heart"></i></h3>
@@ -54,7 +69,13 @@ prac jeszcze wiele się zmieni. </h3>
 
 
 
-
+<script src="web.js">
+const toggleButton = document.getElementsByClassName('toggle-button')[0]
+  const navbarLinks = document.getElementsByClassName('navbar-links')[0]
+  
+  toggleButton.addEventListener('click', () => {
+      navbarLinks.classList.toggle('active')
+  })</script>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
 <script>
    var $arrow = $("#arrow a");
